fix: Adicionar ícone do WhatsApp local
- Copiar whatsappicon.webp do projeto 03-LANDING-PAGE-PROMOCOES-BANCA
- Atualizar caminho do botão flutuante de WhatsApp
- Remover dependência de arquivo externo

--- a/index.html
+++ b/index.html
@@ -1914,7 +1914,7 @@
 
     <!-- WhatsApp Float Button -->
     <a href="javascript:void(0)" class="whatsapp-float" onclick="abrirWhatsApp('Atendimento Geral')" title="WhatsApp" aria-label="Abrir WhatsApp">
-        <img src="../03-LANDING-PAGE-PROMOCOES-BANCA/whatsappicon.webp" alt="WhatsApp Atendimento" width="42" height="42" decoding="async">
+        <img src="whatsappicon.webp" alt="WhatsApp Atendimento" width="42" height="42" decoding="async">
     </a>
 
     <!-- Modal Captura Nome -->
