fix: Diminuir tamanho do texto do pop-up no mobile
- Reduzir font-size do h3 do modal de 1.8rem para 1.2rem no mobile
- Melhorar legibilidade em telas pequenas
- Aplicar apenas em @media (max-width: 768px)

--- a/index.html
+++ b/index.html
@@ -1323,6 +1323,11 @@
                 padding: 12px;
                 font-size: 0.8rem;
             }
+
+            /* Modal Captura - Mobile */
+            .modal h3 {
+                font-size: 1.2rem;
+            }
         }
 
         @media (min-width: 769px) {
