--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         .header-logo img {
             height: 50px;
             width: auto;
-            aspect-ratio: 3/1;
+            object-fit: contain;
         }
 
         .header-btn {
