--- a/index.html
+++ b/index.html
@@ -1499,7 +1499,7 @@
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
             t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "ubo9iaiokv");
+        })(window, document, "clarity", "script", "uf6ycndw8h");
     </script>
 </head>
 <body>
