feat: atualiza configurações e melhorias nas páginas

--- a/index.html
+++ b/index.html
@@ -1989,7 +1989,7 @@
                 <img src="Imagens das bancas/banca-beira-mar.webp" alt="Banca Pacheco Beiramar" class="banca-img" width="180" height="135" loading="lazy">
                 <div class="banca-info">
                     <h3>Banca Pacheco Beiramar</h3>
-                    <p>📍 Florianópolis - SC<br>Shopping Beiramar</p>
+                    <p>📍 Florianópolis - SC<br>Agronômica, Florianópolis</p>
                     <div class="banca-actions">
                         <button class="banca-btn banca-btn-whatsapp" onclick="abrirWhatsApp('Banca Pacheco Beiramar','localizacoes')">Falar no WhatsApp</button>
                     </div>
